# graph_algorithms

./: .gitignore  CMakeLists.txt  LICENSE  main.c++
include/: OrientedGraph.h++  Truba.h++  UnorientedGraph.h++  alg.h++  breadth-first_search.h++  deep-first_search.h++  graph.h++  matplotlibcpp.h++  setCover.h++
scripts/: plot.py
src/: ex.c++  example.c++
